# RAG_pipeline_playground

./: README.md  dataingestion.ipynb  pyproject.toml  requirements.txt
ChromaDB/: rag-chromedb.ipynb
ChromaDB/chroma_db/: chroma.sqlite3
data/text_files/: example1.txt  example2.txt
faiss_index/: index.faiss  index.pkl
